Quick fix to gap and swap video iframe

--- a/_sass/modules/_hero.scss
+++ b/_sass/modules/_hero.scss
@@ -109,7 +109,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      gap: clamp(0.85rem, 4vw, 1.55rem);
+      gap: clamp(1rem, 4.5vw, 2rem);
     }
 
     .button-solid, .button-transparent { font-size: var(--h7-headline-size); }
