--- a/_sass/modules/_sermon.scss
+++ b/_sass/modules/_sermon.scss
@@ -11,7 +11,7 @@
       display: flex;
       flex-direction: column;
       align-items: start;
-      gap: clamp(1rem, 3vw, 2rem);
+      gap: clamp(2rem, 4vw, 4rem);
     }
 
     .content {
